fixed the main tag font sizes on smaller screens, webpage complete

--- a/education/edu.css
+++ b/education/edu.css
@@ -122,6 +122,7 @@ main ul li{
     main{
         height: 100vh;
         width: 100%;
+        font-size: calc(2px + 2vw);
     }
 
 }
