--- a/index.css
+++ b/index.css
@@ -109,6 +109,7 @@ img{
     main{
         height: 100vh;
         width: 100%;
+        font-size: calc(2px + 2vw);
     }
 
 }
