--- a/lpd/lpd.css
+++ b/lpd/lpd.css
@@ -111,6 +111,7 @@ main ul li{
     main{
         height: 100vh;
         width: 100%;
+        font-size: calc(2px + 2vw);
     }
 
 }
