--- a/skills/skills.css
+++ b/skills/skills.css
@@ -127,6 +127,7 @@ main ul li{
     main{
         height: 100vh;
         width: 100%;
+        font-size: calc(2px + 2vw);
     }
 
 }
